improve Dockerfile to reduce final image size